style: changed minor things
- import of matplotlib was done twice
- deleted some unnecessary commented code

--- a/ML/image_classifier/Image Classifier Project.ipynb
+++ b/ML/image_classifier/Image Classifier Project.ipynb
@@ -33,7 +33,6 @@
    "source": [
     "# Imports here\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "import torch\n",
     "from torch import nn, optim\n",
@@ -232,13 +231,7 @@
     "# TODO: Using the image datasets and the trainforms, define the dataloaders\n",
     "train_loader = torch.utils.data.DataLoader(image_datasets['train'], batch_size = 64, shuffle = True)\n",
     "valid_loader = torch.utils.data.DataLoader(image_datasets['valid'], batch_size = 64)\n",
-    "test_loader = torch.utils.data.DataLoader(image_datasets['test'], batch_size = 64)\n",
-    "\n",
-    "\n",
-    "#subset_indices = [0, 1, 2, 3, 4] # select your indices here as a list\n",
-    "#train_loader_sub = torch.utils.data.DataLoader(torch.utils.data.Subset(image_datasets['train'], subset_indices), batch_size=16, num_workers=2, shuffle=False)\n",
-    "#valid_loader_sub = torch.utils.data.DataLoader(torch.utils.data.Subset(image_datasets['valid'], subset_indices), batch_size=16, num_workers=2, shuffle=False)\n",
-    "#test_loader_sub = torch.utils.data.DataLoader(torch.utils.data.Subset(image_datasets['test'], subset_indices), batch_size=16, num_workers=2, shuffle=False)\n"
+    "test_loader = torch.utils.data.DataLoader(image_datasets['test'], batch_size = 64)"
    ]
   },
   {
@@ -289,15 +282,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Build and train your network"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -327,6 +311,8 @@
     }
    ],
    "source": [
+    "# TODO: Build and train your network\n",
+    "\n",
     "## Load a pre-trained network (If you need a starting point, the VGG networks work great and are straightforward to use)\n",
     "\n",
     "# Use GPU if it's available\n",
